# FarmShield_Nirmith_NMIT_Zoro

backend/: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  DEPLOYMENT.md  docker-compose.override.yml  docker-compose.yml
backend/Hardware/: farmshield.ino
backend/docs/: DATA_SNAPSHOT.md  (+6 more)
backend/server/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/server/alembic/: env.py
backend/server/alembic/versions/: 0001_initial.py  0002_sensor_readings_unique_time_device.py  0003_add_firmware_fields.py  0004_readonly_user.py  0005_audio_pest_detection.py
backend/server/app/: config.py  dependencies.py  main.py
backend/server/app/api/v1/: alerts.py  audio.py  chat.py  control.py  dev.py  health.py  router.py  sensors.py  voice.py  ws.py
backend/server/app/core/: auth.py  exceptions.py  logging.py
backend/server/app/db/: models.py  session.py
backend/server/app/mqtt/: client.py  handlers.py
backend/server/app/schemas/: alert.py  audio.py  chat.py  control.py  dev.py  sensor.py
backend/server/app/services/: alert.py  audio_inference.py  control.py  ingestion.py  sensor.py  websocket.py
backend/server/app/services/chat/: __init__.py  agent.py  rag_tool.py  session_store.py  sql_tool.py
backend/server/app/services/chat/knowledge/: irrigation_guide.md  npk_reference.md  soil_guide.md
backend/server/app/services/dev/: npk_override.py
backend/server/app/services/ml/: runner.py
backend/server/config/: thresholds.md
farmshield-frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
(+46 files in other folders)
